--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "trip"
 version = "0.1.0"
 authors = ["Will Alexander <wwalexander@users.noreply.github.com>"]
+description = "Finds tripcodes that contain patterns."
 license = "MIT/Apache-2.0"
 
 [dependencies]
