--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Will Alexander <wwalexander@users.noreply.github.com>"]
 description = "Finds tripcodes that contain patterns"
 repository = "https://github.com/wwalexander/trip"
 readme = "README.md"
-categories = ["command-line-interface", "command-line-utilities", "cryptography"]
+categories = ["command-line-utilities", "cryptography"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
